addresses issue #41 pic sizes do not change now and long words or links will now wrap within the text box

--- a/app/assets/stylesheets/chat.css
+++ b/app/assets/stylesheets/chat.css
@@ -107,6 +107,8 @@ div.copyright {
 }
 
 .messages {
+  max-width: 466px;
+  word-wrap: break-word;
   background: white;
   padding: 10px;
   border-radius: 2px;
